// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta renders with metadata from props 1`] = `
<h6>
  2010
  <span
    className="sc-bdVaJa kTqdzK"
  >
    R
  </span>
  125
</h6>
`;

exports[`Meta renders without error on missing props 1`] = `
<h6>
  <span
    className="sc-bdVaJa kTqdzK"
  />
</h6>
`;
